--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
               src="./logo.restaurant.png"
               alt="Mist and Stone Restaurant Logo"
             />
-            Mist & Stone
+            The Mist & Stone
           </a>
           <ul class="nav-links">
             <li><a href="index.html" class="active">HOME</a></li>
@@ -91,7 +91,7 @@
               src="./logo.restaurant.png"
               alt="Mist and Stone Restaurant Logo"
             />
-            Mist & Stone
+           The Mist & Stone
           </a>
           <ul class="nav-links">
             <li><a href="index.html" class="active">HOME</a></li>
