--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                 src="./logo.restaurant.png"
                 alt="Mist and Stone Restaurant Logo"
               />
-              Mist & Stone
+              The Mist & Stone
             </a>
             <ul class="nav-links">
               <li><a href="index.html">HOME</a></li>
@@ -71,7 +71,7 @@
                 src="./logo.restaurant.png"
                 alt="Mist and Stone Restaurant Logo"
               />
-              Mist & Stone
+              The Mist & Stone
             </a>
             <ul class="nav-links">
               <li><a href="index.html">HOME</a></li>
