--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               src="./logo.restaurant.png"
               alt="Mist and Stone Restaurant Logo"
             />
-            Mist & Stone
+            The Mist & Stone
           </a>
           <ul class="nav-links">
             <li><a href="index.html" class="active">HOME</a></li>
@@ -30,12 +30,6 @@
       <!-- Section 1: Welcome -->
       <section class="home-section welcome">
         <div class="section-container">
-          <div class="image">
-            <img
-              src="./B I S T R O T B I O - Orto & Natura.jpg"
-              alt="Restaurant exterior in the misty highlands"
-            />
-          </div>
           <div class="text">
             <h2>Welcome to Mist & Stone</h2>
             <p>
@@ -44,6 +38,12 @@
               with a lasting memory.
             </p>
           </div>
+          <div class="image">
+            <img
+              src="./B I S T R O T B I O - Orto & Natura.jpg"
+              alt="Restaurant exterior in the misty highlands"
+            />
+          </div>
         </div>
       </section>
 
@@ -51,10 +51,13 @@
       <section class="home-section culinary">
         <div class="section-container">
           <div class="image">
-            <img src="./Roasts.jpg" alt="Chef preparing fire-grilled dishes" />
+            <img
+              src="./_Discover an exquisite dining experience with this….jpg"
+              alt="Variety of international dishes"
+            />
           </div>
           <div class="text">
-            <h2>Flavors of the Highlands</h2>
+            <h2>Various Worldwide Dishes</h2>
             <p>
               Savor locally sourced ingredients, fire-grilled to perfection. Our
               chefs craft each dish with passion, blending tradition with
@@ -67,18 +70,18 @@
       <!-- Section 3: Scenic Views -->
       <section class="home-section views">
         <div class="section-container">
-          <div class="image">
-            <img
-              src="./view.jpg"
-              alt="Panoramic view from the restaurant terrace"
-            />
-          </div>
           <div class="text">
             <h2>Feast with a View</h2>
             <p>
               Dine against a backdrop of rolling hills and misty landscapes.
               Whether it's sunrise or sunset, the view is always on the menu.
             </p>
+          </div>
+          <div class="image">
+            <img
+              src="./view.jpg"
+              alt="Panoramic view from the restaurant terrace"
+            />
           </div>
         </div>
       </section>
@@ -112,7 +115,7 @@
               src="./logo.restaurant.png"
               alt="Mist and Stone Restaurant Logo"
             />
-            Mist & Stone
+            The Mist & Stone
           </a>
           <ul class="nav-links">
             <li><a href="index.html" class="active">HOME</a></li>
