mist and stone project done

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <body>
     <div class="page-wrapper">
       <!-- Header -->
-      <header class="TOP">
+      <header class="main-header">
         <div class="header-container">
           <nav class="navbar">
             <a href="index.html" class="logo">
@@ -26,12 +26,28 @@
                 src="./logo.restaurant.png"
                 alt="Mist and Stone Restaurant Logo"
               />
-              The Mist & Stone
+              <div class="brand">
+                <span>Mist & Stone</span>
+                <small class="tagline">A Highland Haven of Flavor</small>
+              </div>
             </a>
             <ul class="nav-links">
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html" class="active">Contact</a></li>
+              <li>
+                <a href="index.html" class="active"
+                  ><ion-icon name="home-outline"></ion-icon> Home</a
+                >
+              </li>
+              <li>
+                <a href="about.html"
+                  ><ion-icon name="information-circle-outline"></ion-icon>
+                  About</a
+                >
+              </li>
+              <li>
+                <a href="contact.html"
+                  ><ion-icon name="call-outline"></ion-icon> Contact</a
+                >
+              </li>
             </ul>
           </nav>
         </div>
@@ -63,7 +79,7 @@
       </main>
 
       <!-- Footer -->
-      <footer>
+      <footer class="main-footer">
         <div class="footer-container">
           <nav class="navbar">
             <a href="index.html" class="logo">
@@ -71,12 +87,28 @@
                 src="./logo.restaurant.png"
                 alt="Mist and Stone Restaurant Logo"
               />
-              The Mist & Stone
+              <div class="brand">
+                <span>Mist & Stone</span>
+                <small class="tagline">A Highland Haven of Flavor</small>
+              </div>
             </a>
             <ul class="nav-links">
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html" class="active">Contact</a></li>
+              <li>
+                <a href="index.html"
+                  ><ion-icon name="home-outline"></ion-icon> Home</a
+                >
+              </li>
+              <li>
+                <a href="about.html"
+                  ><ion-icon name="information-circle-outline"></ion-icon>
+                  About</a
+                >
+              </li>
+              <li>
+                <a href="contact.html"
+                  ><ion-icon name="call-outline"></ion-icon> Contact</a
+                >
+              </li>
             </ul>
             <div class="social-icons">
               <a
