--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="TOP">
+    <header class="main-header">
       <div class="header-container">
         <nav class="navbar">
           <a href="index.html" class="logo">
@@ -15,12 +15,28 @@
               src="./logo.restaurant.png"
               alt="Mist and Stone Restaurant Logo"
             />
-            The Mist & Stone
+            <div class="brand">
+              <span>Mist & Stone</span>
+              <small class="tagline">A Highland Haven of Flavor</small>
+            </div>
           </a>
           <ul class="nav-links">
-            <li><a href="index.html" class="active">HOME</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li>
+              <a href="index.html" class="active"
+                ><ion-icon name="home-outline"></ion-icon> Home</a
+              >
+            </li>
+            <li>
+              <a href="about.html"
+                ><ion-icon name="information-circle-outline"></ion-icon>
+                About</a
+              >
+            </li>
+            <li>
+              <a href="contact.html"
+                ><ion-icon name="call-outline"></ion-icon> Contact</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
@@ -82,8 +98,7 @@
         </div>
       </div>
     </main>
-
-    <footer>
+    <footer class="main-footer">
       <div class="footer-container">
         <nav class="navbar">
           <a href="index.html" class="logo">
@@ -91,12 +106,28 @@
               src="./logo.restaurant.png"
               alt="Mist and Stone Restaurant Logo"
             />
-           The Mist & Stone
+            <div class="brand">
+              <span>Mist & Stone</span>
+              <small class="tagline">A Highland Haven of Flavor</small>
+            </div>
           </a>
           <ul class="nav-links">
-            <li><a href="index.html" class="active">HOME</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li>
+              <a href="index.html"
+                ><ion-icon name="home-outline"></ion-icon> Home</a
+              >
+            </li>
+            <li>
+              <a href="about.html"
+                ><ion-icon name="information-circle-outline"></ion-icon>
+                About</a
+              >
+            </li>
+            <li>
+              <a href="contact.html"
+                ><ion-icon name="call-outline"></ion-icon> Contact</a
+              >
+            </li>
           </ul>
           <div class="social-icons">
             <a
@@ -117,9 +148,13 @@
         </nav>
       </div>
     </footer>
-  </body>
+    <script
+    type="module"
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+  ></script>
   <script
     nomodule
     src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
   ></script>
+  </body>
 </html>
