--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               Dine against a backdrop of rolling hills and misty landscapes.
               Whether it's sunrise or sunset, the view is always on the menu.
             </p>
-            <a href="gallery.html" class="cta-button">See the Scenery</a>
+            <a href="about.html" class="cta-button">See the Scenery</a>
           </div>
           <div class="image">
             <img
