--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
               chefs craft each dish with passion, blending tradition with
               innovation.
             </p>
-            <a href="about.html#cuisine" class="cta-button"
-              >Explore Our Cuisine</a
-            >
+            <a href="about.html" class="cta-button">Explore Our Cuisine</a>
           </div>
         </div>
       </section>
