--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
       <section class="home-section culinary">
         <div class="section-container">
           <div class="image">
-            <img
-              src="./_Discover an exquisite dining experience with this….jpg"
-              alt="Variety of international dishes"
-            />
+            <img src="./_Discover.jpg" alt="Variety of international dishes" />
           </div>
           <div class="text">
             <h2>Various Worldwide Dishes</h2>
