--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               At Mist & Stone, every visit begins with a warm welcome and ends
               with a lasting memory.
             </p>
-            <a href="about.html" class="cta-button">View Our Menu</a>
+            <a href="about.html" class="cta-button">View More</a>
           </div>
           <div class="image">
             <img
